<resources>
    <string name="app_name">Oshi Order Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="order">Order Number</string>
    <string name="phone">Phone Number</string>
    <string name="btn">Submit</string>
    <string name="cust_name">Customer Name</string>
    <string name="city">City</string>
    <string name="contact">Contact Number</string>
    <string name="date">Order Date</string>
    <string name="status">Order Status</string>
    <string name="track">TCS Tracking Number</string>
    <string name="addres">Shipping Address</string>
    <string name="inst">Other Instruction</string>
    <string name="summary">Item Summary</string>
    <string name="ordertrck">TRACK YOUR ORDER</string>
    <string name="orderinfo">ORDER INFORMATION</string>

    <!-- Copyright (C) 2016 The Android Open Source Project

         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at

              http://www.apache.org/licenses/LICENSE-2.0

         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
    -->
        <!-- Title for the application. [CHAR LIMIT=12] -->

        <!-- Header that goes above the title of the earthquake event [CHAR LIMIT=50] -->
        <string name="header_event">Event</string>

        <!-- Header that goes above the date of the earthquake event [CHAR LIMIT=50] -->
        <string name="header_date">Date</string>

        <!-- Header that goes above whether or not there was a tsunami alert issued
             during the earthquake event [CHAR LIMIT=50] -->
        <string name="header_tsunami_alert">Tsunami Alert?</string>

        <!-- Text when there was no tsunami alert issued [CHAR LIMIT=50] -->
        <string name="alert_no">No</string>

        <!-- Text when there was a tsunami alert issued [CHAR LIMIT=50] -->
        <string name="alert_yes">Yes</string>

        <!-- Text when there was a tsunami alert issued [CHAR LIMIT=50] -->
        <string name="alert_not_available">Not available</string>

</resources>
